RESOLVED FIXED75630
getComputedStyle for border-radius is not implemented.
https://bugs.webkit.org/show_bug.cgi?id=75630
Summary getComputedStyle for border-radius is not implemented.
Alexis Menard (darktears)
Reported 2012-01-05 09:59:47 PST
getComputedStyle for border-radius is not implemented.
Attachments
Patch (24.97 KB, patch)
2012-01-05 10:02 PST, Alexis Menard (darktears)
no flags
Patch (28.59 KB, patch)
2012-01-05 11:36 PST, Alexis Menard (darktears)
no flags
Patch (28.74 KB, patch)
2012-01-05 11:52 PST, Alexis Menard (darktears)
no flags
Patch (23.40 KB, patch)
2012-01-09 05:59 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2012-01-05 10:02:14 PST
Alexis Menard (darktears)
Comment 2 2012-01-05 10:03:37 PST
I need some feedback here whether it is the right approach, especially in the change regarding CSSPrimitiveValue. Thanks.
Tony Chang
Comment 3 2012-01-05 10:57:35 PST
Comment on attachment 121291 [details] Patch Per IRC discussion, CSS_UNQUOTED_STRING feels hacky. We should instead extend CSSListValue so it knows how to use '/' as a separator. Then the above could be represented as 2 lists in a list.
Alexis Menard (darktears)
Comment 4 2012-01-05 11:36:26 PST
Alexis Menard (darktears)
Comment 5 2012-01-05 11:38:06 PST
Comment on attachment 121304 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=121304&action=review > Source/WebCore/css/CSSValue.h:188 > + unsigned char m_valueListType : ValueListTypeBits; // CSSValueList type This is a controversial change with the patch, CSSValue will not fit in 16 bits anymore. Any suggestions?
Alexis Menard (darktears)
Comment 6 2012-01-05 11:52:08 PST
Tony Chang
Comment 7 2012-01-05 12:04:07 PST
One way to get the extra bit back would be to split CSSValueList into two classes: CSSValueListCommaSeparated and CSSValueListSpaceSeparated. This would allow us to remove m_isSpaceSeparatedValueList from CSSValue.h and move that bit into m_classType. This gives us 32 additional CSSValue class types. This would be a bit tricky because most of the code for CSSValueListCommaSeparated and CSSValueListSpaceSeparated would want to share code. Maybe one could inherit from the other? Also WebKitCSSFilterValue and WebKitCSSTransformValue inherit from CSSValueList and it looks like FilterValue can use spaces or commas (maybe it would have to be split into two as well?). If we can't find a place to get the extra bit back, we could go back to the first patch which allows us to make the '/' a primitive type.
Tony Chang
Comment 8 2012-01-05 16:22:29 PST
Ryosuke suggested keeping a single CSSValueList, but have 2 different m_classType values for spaces vs commas. This seems less invasive. I can try it in a separate patch tomorrow.
WebKit Review Bot
Comment 9 2012-01-05 17:51:43 PST
Comment on attachment 121308 [details] Patch Attachment 121308 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11144160
Alexis Menard (darktears)
Comment 10 2012-01-06 05:48:02 PST
(In reply to comment #8) > Ryosuke suggested keeping a single CSSValueList, but have 2 different m_classType values for spaces vs commas. This seems less invasive. I can try it in a separate patch tomorrow. Problem is WebKitCSSFilter and WebKitCSSTransform have their own class type and the former can either be space or comma separated if I'm not mistaken. The reason of them being special class is when querying the CSS text value it will static_cast them to the right type to call customCSSText.
Alexis Menard (darktears)
Comment 11 2012-01-06 10:45:56 PST
(In reply to comment #10) > (In reply to comment #8) > > Ryosuke suggested keeping a single CSSValueList, but have 2 different m_classType values for spaces vs commas. This seems less invasive. I can try it in a separate patch tomorrow. > > Problem is WebKitCSSFilter and WebKitCSSTransform have their own class type and the former can either be space or comma separated if I'm not mistaken. The reason of them being special class is when querying the CSS text value it will static_cast them to the right type to call customCSSText. There is one alternative there : https://bugs.webkit.org/show_bug.cgi?id=75714 which is to remove the inheritance of RefCounted and allows us to modify how the refcount is handle. After the patch linked I could reduce m_refCount to be 15 bits and change bool m_isSpaceSeparatedValueList : 1; to be a enum with 3 values (Comma, Spaces, Slash) of 2 bits.
Alexis Menard (darktears)
Comment 12 2012-01-09 04:06:17 PST
(In reply to comment #11) > (In reply to comment #10) > > (In reply to comment #8) > > > Ryosuke suggested keeping a single CSSValueList, but have 2 different m_classType values for spaces vs commas. This seems less invasive. I can try it in a separate patch tomorrow. > > > > Problem is WebKitCSSFilter and WebKitCSSTransform have their own class type and the former can either be space or comma separated if I'm not mistaken. The reason of them being special class is when querying the CSS text value it will static_cast them to the right type to call customCSSText. > > There is one alternative there : > > https://bugs.webkit.org/show_bug.cgi?id=75714 > > which is to remove the inheritance of RefCounted and allows us to modify how the refcount is handle. > > After the patch linked I could reduce m_refCount to be 15 bits and change bool m_isSpaceSeparatedValueList : 1; to be a enum with 3 values (Comma, Spaces, Slash) of 2 bits. I think a better looking alternative than https://bugs.webkit.org/show_bug.cgi?id=75725 and https://bugs.webkit.org/show_bug.cgi?id=75714 could be https://bugs.webkit.org/show_bug.cgi?id=75841
Alexis Menard (darktears)
Comment 13 2012-01-09 05:59:26 PST
WebKit Review Bot
Comment 14 2012-01-09 11:27:09 PST
Comment on attachment 121652 [details] Patch Clearing flags on attachment: 121652 Committed r104469: <http://trac.webkit.org/changeset/104469>
WebKit Review Bot
Comment 15 2012-01-09 11:27:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.