getComputedStyle for border-radius is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75630

Reviewed by Tony Chang.

Source/WebCore:

Implement getComputedStyle for border-radius shorthand property.

Test: fast/css/getComputedStyle/getComputedStyle-border-radius-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::getBorderRadiusCornerValues):
(WebCore::getBorderRadiusCornerValue):
(WebCore::getBorderRadiusShorthandValue):
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add new tests to make sure we return the correct values.

* fast/css/getComputedStyle/getComputedStyle-border-radius-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-border-radius-shorthand.html: Added.


Canonical link: https://commits.webkit.org/92669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104469 268f45cc-cd09-0410-ab3c-d52691b4dbfc